# iseq-baseline-profmark

./: .flake8  .gitignore  .pre-commit-config.yaml  Clan-wise.ipynb  MANIFEST.in  Merge-chunks.ipynb  README.md  Show-progress.ipynb  config.cfg  config.py  data.py  iseq_prof_analysis.cfg  plot.py  pyproject.toml  setup.cfg
baseline/: Clan-wise.ipynb  Merge-chunks.ipynb  Organism-wise.ipynb  Profile-wise.ipynb
chlamydia/: Analysis.ipynb  Depth 49 Hybrid consensus.ipynb  Sequences mapped to depth 49 hybrid consensus.ipynb  Small_subsample.ipynb  config.cfg  config.py
iseq_prof_analysis/: __init__.py  _config.py
iseq_prof_analysis/baseline/: data.py  plot.py
