[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = ISEQ profiling
download_url = https://github.com/EBI-Metagenomics/iseq-prof-analysis
keywords = iseq, profiling, analysis
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = iseq-prof-analysis
url = https://github.com/EBI-Metagenomics/iseq-prof-analysis

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    pysam
    biopython>=1.78
    diskcache>=5.0.3
    fasta-reader>=1.0.0
    hmmer-reader>=0.0.10
    hmmer>=0.0.8
    iseq-prof>=0.0.3
    lttb>=0.2.2
    numpy>=1.18.1
    pandas>=1.1.2
    plotly>=4.8.2
    tqdm>=4.42.1

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
